--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ comm==0.2.1
 contourpy==1.2.0
 cycler==0.12.1
 debugpy==1.8.0
-decorator==5.1.1
+decorator==4.4.2  # Downgraded to satisfy moviepy
 defusedxml==0.7.1
 ete3==3.1.3
 executing==2.0.1
@@ -25,8 +25,8 @@ fastjsonschema==2.19.1
 fonttools==4.47.2
 fqdn==1.5.1
 idna==3.6
-ipykernel==6.29.0
-ipython==8.20.0
+ipykernel==5.5.6  # Aligned with Colab's requirements
+ipython==7.34.0  # Aligned with Colab's requirements
 ipywidgets==8.1.1
 isoduration==20.11.0
 jedi==0.19.1
@@ -59,23 +59,23 @@ nbclient==0.9.0
 nbconvert==7.14.2
 nbformat==5.9.2
 nest-asyncio==1.6.0
-notebook==7.0.7
+notebook==6.5.5  # Aligned with Colab's requirements
 notebook_shim==0.2.3
 numpy==1.26.3
 overrides==7.6.0
 packaging==23.2
-pandas==2.2.0
+pandas==2.0.3  # Aligned with Colab's requirements
 pandocfilters==1.5.1
 parso==0.8.3
 pexpect==4.9.0
-pillow==10.2.0
+pillow==8.3.2  # Downgraded to satisfy imageio
 platformdirs==4.1.0
 prometheus-client==0.19.0
 prompt-toolkit==3.0.43
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
-pyarrow==16.0.0
+pyarrow==15.0.0  # Downgraded to satisfy ibis-framework
 pycparser==2.21
 Pygments==2.17.2
 pyparsing==3.1.1
@@ -105,7 +105,7 @@ terminado==0.18.0
 textdistance==4.6.1
 threadpoolctl==3.2.0
 tinycss2==1.2.1
-tornado==6.4
+tornado==6.3.3  # Aligned with Colab's requirements
 tqdm==4.66.1
 traitlets==5.14.1
 types-python-dateutil==2.8.19.20240106
