--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ comm==0.2.1
 contourpy==1.2.0
 cycler==0.12.1
 debugpy==1.8.0
-decorator==4.4.2  # Downgraded to satisfy moviepy
+decorator==4.4.2
 defusedxml==0.7.1
 ete3==3.1.3
 executing==2.0.1
@@ -25,8 +25,6 @@ fastjsonschema==2.19.1
 fonttools==4.47.2
 fqdn==1.5.1
 idna==3.6
-ipykernel==5.5.6  # Aligned with Colab's requirements
-ipython==7.34.0  # Aligned with Colab's requirements
 ipywidgets==8.1.1
 isoduration==20.11.0
 jedi==0.19.1
@@ -37,18 +35,6 @@ json5==0.9.14
 jsonpointer==2.4
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.9.0
-jupyter-lsp==2.2.2
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-jupyter_server==2.12.5
-jupyter_server_terminals==0.5.2
-jupyterlab==4.0.11
-jupyterlab-widgets==3.0.9
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.2
 kiwisolver==1.4.5
 Levenshtein==0.24.0
 MarkupSafe==2.1.4
@@ -59,23 +45,21 @@ nbclient==0.9.0
 nbconvert==7.14.2
 nbformat==5.9.2
 nest-asyncio==1.6.0
-notebook==6.5.5  # Aligned with Colab's requirements
-notebook_shim==0.2.3
 numpy==1.26.3
 overrides==7.6.0
 packaging==23.2
-pandas==2.0.3  # Aligned with Colab's requirements
+pandas==2.0.3
 pandocfilters==1.5.1
 parso==0.8.3
 pexpect==4.9.0
-pillow==8.3.2  # Downgraded to satisfy imageio
+pillow==8.3.2
 platformdirs==4.1.0
 prometheus-client==0.19.0
 prompt-toolkit==3.0.43
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
-pyarrow==15.0.0  # Downgraded to satisfy ibis-framework
+pyarrow==15.0.0
 pycparser==2.21
 Pygments==2.17.2
 pyparsing==3.1.1
@@ -105,7 +89,7 @@ terminado==0.18.0
 textdistance==4.6.1
 threadpoolctl==3.2.0
 tinycss2==1.2.1
-tornado==6.3.3  # Aligned with Colab's requirements
+tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.14.1
 types-python-dateutil==2.8.19.20240106
