--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-anyio==3.1.0
+anyio==4.2.0
 anytree==2.12.1
 appnope==0.1.3
 argon2-cffi==23.1.0
@@ -10,23 +10,41 @@ attrs==23.2.0
 Babel==2.14.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
-certifi==2023.11.17
+branca==0.7.1
+Brotli==1.0.9
+cattrs==23.2.3
+certifi==2024.2.2
 cffi==1.16.0
-charset-normalizer==3.3.2
+chardet==4.0.0
+charset-normalizer==2.0.4
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
 comm==0.2.1
 contourpy==1.2.0
 cycler==0.12.1
 debugpy==1.8.0
-decorator==4.4.2
+decorator==5.1.1
 defusedxml==0.7.1
 ete3==3.1.3
 executing==2.0.1
 fastjsonschema==2.19.1
+filelock==3.13.1
+fiona==1.9.6
+folium==0.16.0
 fonttools==4.47.2
 fqdn==1.5.1
-idna==3.6
+fsspec==2024.3.1
+geographiclib==2.0
+geopandas==0.14.3
+geopy==2.4.1
+huggingface-hub==0.22.2
+idna==3.4
+ipykernel==6.29.0
+ipython==8.20.0
 ipywidgets==8.1.1
 isoduration==20.11.0
+jaraco.classes==3.3.1
 jedi==0.19.1
 jellyfish==1.0.3
 Jinja2==3.1.3
@@ -35,66 +53,105 @@ json5==0.9.14
 jsonpointer==2.4
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
+jupyter==1.0.0
+jupyter_client==8.6.0
+jupyter-console==6.6.3
+jupyter_core==5.7.1
+jupyter-events==0.9.0
+jupyter-lsp==2.2.2
+jupyter_server==2.12.5
+jupyter_server_terminals==0.5.2
+jupyterlab==4.0.11
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.2
+jupyterlab-widgets==3.0.9
+keyring==24.3.1
 kiwisolver==1.4.5
 Levenshtein==0.24.0
+markdown-it-py==3.0.0
 MarkupSafe==2.1.4
 matplotlib==3.8.2
 matplotlib-inline==0.1.6
+mdurl==0.1.2
 mistune==3.0.2
+more-itertools==10.2.0
+mpmath==1.3.0
 nbclient==0.9.0
 nbconvert==7.14.2
 nbformat==5.9.2
 nest-asyncio==1.6.0
+networkx==3.1
+notebook==7.0.7
+notebook_shim==0.2.3
 numpy==1.26.3
 overrides==7.6.0
 packaging==23.2
-pandas==2.0.3
+pandas==2.2.0
 pandocfilters==1.5.1
 parso==0.8.3
 pexpect==4.9.0
-pillow==9.0.0
+pillow==10.2.0
+pip==23.3.1
 platformdirs==4.1.0
 prometheus-client==0.19.0
 prompt-toolkit==3.0.43
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
-pyarrow==15.0.0
 pycparser==2.21
 Pygments==2.17.2
+pyinaturalist==0.19.0
 pyparsing==3.1.1
+pyproj==3.6.1
+pyrate-limiter==2.10.0
+PySocks==1.7.1
 python-dateutil==2.8.2
+python-forge==18.6.0
 python-json-logger==2.0.7
 pytz==2023.3.post1
 PyYAML==6.0.1
-pyzmq==24
+pyzmq==25.1.2
 qtconsole==5.5.1
 QtPy==2.4.1
 rapidfuzz==3.6.1
 referencing==0.32.1
+regex==2024.4.16
 requests==2.31.0
+requests-cache==1.2.0
+requests-ratelimiter==0.6.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.7.1
 rpds-py==0.17.1
+safetensors==0.4.3
 scikit-learn==1.4.0
 scipy==1.12.0
 Send2Trash==1.8.2
 setuptools==68.2.2
+shapely==2.0.3
 six==1.16.0
 smart-open==6.4.0
 sniffio==1.3.0
 soupsieve==2.5
 stack-data==0.6.3
+sympy==1.12
 terminado==0.18.0
 textdistance==4.6.1
 threadpoolctl==3.2.0
 tinycss2==1.2.1
-tornado==6.3.3
+tokenizers==0.15.2
+torch==2.2.2
+torchaudio==2.2.2
+torchvision==0.17.2
+tornado==6.4
 tqdm==4.66.1
 traitlets==5.14.1
+transformers==4.39.2
 types-python-dateutil==2.8.19.20240106
+typing_extensions==4.11.0
 tzdata==2023.4
 uri-template==1.3.0
+url-normalize==1.4.3
 urllib3==2.1.0
 wcwidth==0.2.13
 webcolors==1.13
@@ -104,3 +161,4 @@ wheel==0.41.2
 widgetsnbextension==4.0.9
 wordcloud==1.9.3
 xgboost==2.0.3
+xyzservices==2023.10.1
