--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ notebooks/fossils/GBIF_output/
 taxonmatch/files/training_set/
 taxonmatch/files/dictionaries/gbif_dictionaries.pkl
 taxonmatch/files/dictionaries/ncbi_dictionaries.pkl
+notebooks/fossils/leucosiidae_taxonomic_tree_df.txt
