--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ taxonmatch/files/training_set/
 taxonmatch/files/dictionaries/gbif_dictionaries.pkl
 taxonmatch/files/dictionaries/ncbi_dictionaries.pkl
 notebooks/fossils/leucosiidae_taxonomic_tree_df.txt
+.DS_Store
