--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
-notebooks/fossils/NCBI_output/
+# Ignore macOS system files
+.DS_Store
+**/.DS_Store
+*.DS_Store
+
+# Ignore Jupyter checkpoints
 notebooks/fossils/.ipynb_checkpoints/
-*.DS_Store
-*.DS_Store
+
+# Ignore intermediate/output data
+notebooks/fossils/NCBI_output/
 notebooks/fossils/GBIF_output/
+notebooks/fossils/leucosiidae_taxonomic_tree_df.txt
+
+# Ignore temporary or generated files
 taxonmatch/files/training_set/
 taxonmatch/files/dictionaries/gbif_dictionaries.pkl
 taxonmatch/files/dictionaries/ncbi_dictionaries.pkl
-notebooks/fossils/leucosiidae_taxonomic_tree_df.txt
-.DS_Store
