--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ notebooks/fossils/NCBI_output/
 notebooks/fossils/GBIF_output/
 notebooks/fossils/leucosiidae_taxonomic_tree_df.txt
 
-# Ignore temporary or generated files
-taxonmatch/files/training_set/
-taxonmatch/files/dictionaries/gbif_dictionaries.pkl
-taxonmatch/files/dictionaries/ncbi_dictionaries.pkl
+# Ignore files but allow folders with placeholders
+taxonmatch/files/dictionaries/*.pkl
+!taxonmatch/files/dictionaries/.placeholder
+!taxonmatch/files/models/.placeholder
+!taxonmatch/files/training_set/.placeholder
